# sf2

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md
include/sf2/: reflection.hpp  reflection_data.hpp  serializer.hpp  sf2.hpp
include/sf2/_impl/: ParserDefs.hpp  ParserDefs.hxx  commons.hpp  sf2.hxx
include/sf2/details/: ParserDefs.hxx  commons.hpp  sf2.hxx
include/sf2/formats/: json_reader.hpp  json_writer.hpp
include/sf2/io/: CharSource.hpp
tests/: test01.cpp  test_advanced.cpp  test_complex.cpp
